Update nsBrowserApp.cpp and splash.rc
This should fix issue #31 Winternight.exe not functional when rzbrowser.exe is running

--- a/browser/app/splash.rc
+++ b/browser/app/splash.rc
@@ -47,7 +47,7 @@ IDI_APPLICATION ICON FIREFOX_ICO
 
 STRINGTABLE DISCARDABLE
 BEGIN
-    IDS_STARTMENU_APPNAME,              "Firefox"
+    IDS_STARTMENU_APPNAME,              "Winternight-Classic"
 END
 
 #ifdef MOZ_STATIC_BUILD
