add ddg lite search

--- a/xpfe/components/search/datasets/Makefile.in
+++ b/xpfe/components/search/datasets/Makefile.in
@@ -55,6 +55,8 @@ FILES		= \
 	jeeves.src          \
 	startpage.png       \
 	startpage.src       \
+	ddg-lite.png        \
+	ddg-lite.src        \
 	$(NULL)
 endif
 
