--- a/xpinstall/packager/win_gre/config.ini
+++ b/xpinstall/packager/win_gre/config.ini
@@ -79,7 +79,7 @@ Uninstall Filename=GREUninstall.exe
 
 ; This key is used as a fail over key.  This url will be used when the
 ; url in the Site Selector fails.
-url=http://ftp.mozilla.org/pub/mozilla.org/pub/seamonkey/nightly/latest-trunk/windows-xpi
+url=ftp://not.supplied.invalid
 
 ; Default Setup Type values:
 ;   Setup Type 0 - first radio button (default)
@@ -461,7 +461,7 @@ Description Long=Install Engine
 Archive=xpcom.xpi
 Install Size=32
 Install Size System=1
-Install Size Archive=1
+Install Size Archive=688
 Attributes=SELECTED|INVISIBLE|FORCE_UPGRADE
 Force Upgrade File0=[SETUP PATH]\xpcom.dll
 
@@ -472,7 +472,7 @@ Description Long=for use by GRE based applications
 Archive=gre.xpi
 Install Size=32
 Install Size System=1
-Install Size Archive=1
+Install Size Archive=5396
 Attributes=SELECTED
 
 [Component Uninstaller]
@@ -480,9 +480,9 @@ Description Short=GRE Uninstaller
 ;*** LOCALIZE ME BABY ***
 Description Long=Uninstaller for GRE
 Archive=greuninstall.zip
-Install Size=151
+Install Size=153
 Install Size System=1
-Install Size Archive=1
+Install Size Archive=77
 Attributes=SELECTED|INVISIBLE|DOWNLOAD_ONLY
 
 ;Since the uninstaller program is going to be installed into the Windows folder,
@@ -820,11 +820,11 @@ Identifier0=Site0
 ;*** LOCALIZE ME BABY ***
 Description0=Default
 ;*** LOCALIZE ME BABY ***
-Domain0=http://ftp.mozilla.org/pub/mozilla.org/pub/seamonkey/nightly/latest-trunk/windows-xpi
+Domain0=ftp://not.supplied.invalid
 
 Identifier1=Site1
 ;*** LOCALIZE ME BABY ***
 Description1=North America
 ;*** LOCALIZE ME BABY ***
-Domain1=http://ftp.mozilla.org/pub/mozilla.org/pub/seamonkey/nightly/latest-trunk/windows-xpi
+Domain1=ftp://not.supplied.invalid
 
